--- a/components/landingPage/index.html
+++ b/components/landingPage/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="midia/merinha2.png">
-    <title>Resumera - Resuma seu estudo e tempo!</title>
+    <link rel="icon" href="midia/R.png">
+    <title>Resumera | Resuma seu estudo e tempo!</title>
 </head>
 <body>
 
@@ -16,8 +16,8 @@
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu" href="#sobrenos">Sobre Nós</a>
             <a class="cabecalho-menu" href="#contatos">Contatos</a>
-            <a class="cabecalho-menu" href="#">Premium</a>
-            <a class="cabecalho-menu" href="login.html">Login</a>
+            <a class="cabecalho-menu" href="#">Nosso Time</a>
+            <a class="cabecalho-menu" href="../loginPage/login.php">Login</a>
         </nav>
     </header>
 
@@ -27,7 +27,7 @@
             <div class="conteudo-principal-escrito">
                 <h1 class="logo-title">Resumera</h1>
                 <h2 class="conteudo-principal-sub">Economize tempo de estudo! <br> Estude com Resumera!</h2>
-                <button class="botao">Registrar-se</button>
+                <input onclick="trocarDePagina('../signInPage/cadastro.php')" class="botao" type="button" value="Registrar-se">
             </div>
             <img class="imagem-principal" src="midia/imagemprincipal2.png" alt="Menina Sentada Sobre Livros" width="65%">
         </section>
@@ -56,11 +56,12 @@
         <h2 class="rodape-nav">Navegação</h2>
         <nav class="rodape-contain">
             <a class="rodape-contain" href="aboutus/aboutus.html" target="_blank">Nosso Time</a>
-            <a class="rodape-contain" href="https://github.com/Gbex204/Projeto.Resumera.2022" target="_blank">Portifolio</a>
-            <a class="rodape-contain" href="#">Web Design</a>
-            <a class="rodape-contain" href="https://trello.com/b/6v7cFsYJ" target="_blank">Projeto</a>
+            <a class="rodape-contain" href="https://github.com/Gbex204/Projeto.Resumera.2022" target="_blank">Portfólio</a>
+            <a class="rodape-contain" target="_blank" href="https://docs.google.com/document/d/1-k23X4Q2qos9KP_Cin5-qUOe1_mcWy53MTbzuyA6ZZE/edit?usp=sharing">Documentação</a>
+            <a class="rodape-contain" href="https://trello.com/b/UDM6V54A/projeto-resumera-20" target="_blank">Projeto</a>
         </nav>
         <h3 class="rodape-sub">Resumera Project - R. Imac. Conceição, 971-1105 - Rebouças, Curitiba - PR, 80215-182 - Bloco 5 Sala 311</h3>
     </footer>
+    <script src="../.js/script.js"></script>
 </body>
 </html>
