--- a/components/profilePage/style.css
+++ b/components/profilePage/style.css
@@ -10,8 +10,9 @@ font-family: 'Roboto', sans-serif; // Sistema
 }
 
 body {
+    height:100vh; width:100vw;
     font-family: 'Roboto', sans-serif;
-    background-image: linear-gradient(to right,#5981ca, rgb(131, 149, 209));
+    background-color: #e6edf0;
 }
 
 /*---------------------------------------- HEADER ---------------------------------------- */
@@ -68,27 +69,53 @@ nav {
     width: 20%;
     border: 1px solid black;
     border-radius: 10px;
-    background-color: #f7f0f0;
+    background-color: white;
     margin-left: 15px;
     margin-right: 15px;
-    box-shadow: 2px 2px 2px 2px#6d99ec;
+    /*ALTERAÇÕES PARA COMENTAR COM O DIOGO= box-shadow: 2px 2px 2px 2px#6d99ec; */
+}
+
+#profile-content-top{
+    display:flex; justify-content: center; align-items: center;
+    width:100%; height:50%;
+    /* background-color: aqua; */
+}
+
+#profile-content-top-img{
+    width:60%; height:100%;
+    /* background-color: aquamarine; */
+}
+
+#profile-content-bottom{
+    display:flex; justify-content: center; align-items: center; flex-direction: column;
+    width:100%; height:50%;
 }
 
 #img-profile {
     border-radius: 50%;
-    width: 70%;
+    width: 100%; height:100%;
 }
 
 .editprofile {
     margin-top: 5%;
     font-family: 'Roboto', sans-serif;
     width: 60%;
-    height: 8%;
+    height: 15%;
     border-radius: 7px;
     background-color: #0c51cf;
     color: white;
+    cursor: pointer;
 }
 
+.editprofile:hover {
+    background-color: #0c50cfb4;
+}
+
+.bio {
+    font-size: 17px;
+    text-align: center;
+    margin-top: 10px;
+}
 /* CONTEUDO PRINCIPAL DA PÁGINA (RESUMOS) */
 
 .content-principal {
@@ -97,10 +124,10 @@ nav {
     width: 60%;
     border: 1px solid black;
     padding: 5%;
-    background-color: #f7f0f0;
+    background-color: white;
     border-radius: 10px;
     margin-right: 10px;
-    box-shadow: 2px 2px 2px 2px#6d99ec;
+    /* ALTERAÇÕES PARA COMENTAR COM DIOGO = box-shadow: 2px 2px 2px 2px#6d99ec; */
 }
 
 .text-principal {
