--- a/components/signInPage/cadastroStyles.css
+++ b/components/signInPage/cadastroStyles.css
@@ -6,19 +6,18 @@ font-family: 'Poppins', sans-serif;
 font-family: 'Roboto', sans-serif; 
 */
 
-
-
 * {
     margin: 0 0 0 0;
     padding: 0 0 0 0;
 }
 
 body{
-    width:100vw; height:100vh;
+    height: 100vh; width:100vw;
     display:flex;
     justify-content: center;
     align-items: center;
     background-image: linear-gradient(rgb(4, 159, 255), rgb(0, 204, 255));
+    font-family: 'Roboto', sans-serif; 
 }
 
 #container{
@@ -30,7 +29,7 @@ body{
     border-radius: 10px;
 }
 
-#div-esquerda{
+#esquerda_div{
     display:flex;
     justify-content: center;
     align-items: center;
@@ -41,12 +40,12 @@ body{
     border-bottom-left-radius: 10px;
 }
 
-#div-esquerda img{
+#logo_img{
     width:80%;
     height:80%;
 }
 
-#div-direita{
+#direita_div{
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -55,13 +54,15 @@ body{
     height:100%;
 }
 
-#div-direita h3{
+#form-register{
     display:flex;
-    height:10%; width:100%;
-    align-items: center; justify-content: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height:90%;
+    width:100%;
 }
-
-#div-direita form{
+#form-register2{
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -70,238 +71,119 @@ body{
     width:100%;
 }
 
-#div-direita form label{
-    font-family: 'Poppins', sans-serif;
-    font-size:24px;
+.form_label{
+    font-family: 'Roboto', sans-serif; 
+    font-size:18px;
     font-weight: bold;
 }
 
-#div-direita form .input{
+.form_input{
     padding: 0 0 0 15px;
     margin: 0 0 25px 0;
     width: 80%;
-    height:36px;
+    height: 42px;
     outline:none;
     border:none;
 }
 
-#div-direita form .input:focus{
+.form_input:focus{
     border-bottom: 2px solid #105ac9
 }
 
-#div-direita #input-prosseguir{
-    width:25%;
-    height:10%;
-    font-family: 'Poppins', sans-serif;
+/* ##### cadastro.php #####*/
+#input-prosseguir{
+    width:35%;
+    height:15%;
+    font-family: 'Roboto', sans-serif; 
     font-weight: bold;
     color:#efefef;
-    border-radius:15px;
+    border-radius:14px;
+    font-size:16px;
+    border: 2px solid black;
+    background-color: #105ac9;
+    margin-bottom: 3.56px;
+    cursor: pointer;
+}
+
+#input-prosseguir:hover {
+   background-color: #105ac9a6;
+   color: white;
+}
+
+
+/* ##### cadastro2.php #####*/
+#input-cadastrar{
+    width:40%;
+    height:10%;
+    font-family: 'Roboto', sans-serif; 
+    font-weight: bold;
+    color:#efefef;
+    border-radius:14px;
     font-size:16px;
     border: 2px solid black;
     background-color: #105ac9;
 }
 
+p, a {
+    font-family: 'Roboto', sans-serif; 
+    font-weight: 600;
+    text-align: center;
+    text-decoration: none;
+}
 
+a:hover {
+    color: blue;
+}
 
-
-
-
-
-
-
-
-
-
-
-@media (min-width:1001px) {
-    * {
-        margin: 0 0 0 0;
-        padding: 0 0 0 0;
-    }
-    
-    body{
-        width:100vw; height:100vh;
-        display:flex;
-        justify-content: center;
-        align-items: center;
-        background-image: linear-gradient(rgb(4, 159, 255), rgb(0, 204, 255));
-    }
-    
-    #container{
-        display:flex;
-        flex-direction: row;
-        background-color: #efefef;
-        width: 60%;
-        height: 60%;
-    }
-    
-    #div-esquerda{
-        display:flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #105ac9;
-        width:55%;
-        height: 100%;
-    }
-    
-    #div-esquerda img{
-        width:80%;
-        height:80%;
-    }
-    
-    #div-direita{
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;;
-        width:45%;
-        height:100%;
-    }
-    
-    #div-direita h3{
-        display:flex;
-        height:10%; width:100%;
-        align-items: center; justify-content: center;
-    }
-    
-    #div-direita form{
-        display:flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height:90%;
-        width:100%;
-    }
-    
-    #div-direita form label{
+@media (max-width: 900px){
+    .form_label{
         font-family: 'Poppins', sans-serif;
-        font-size:24px;
+        font-size:16px;
         font-weight: bold;
     }
-    
-    #div-direita form .input{
-        padding: 0 0 0 15px;
-        margin: 0 0 25px 0;
-        width: 80%;
-        height:36px;
-        outline:none;
-        border:none;
-    }
-    
-    #div-direita form .input:focus{
-        border-bottom: 2px solid #105ac9
-    }
-    
-    #div-direita #input-prosseguir{
-        width:25%;
+
+    /* ##### cadastro.php #####*/
+    #input-prosseguir{
+        width:80%;
         height:10%;
         font-family: 'Poppins', sans-serif;
         font-weight: bold;
         color:#efefef;
-        border-radius:15px;
+        border-radius:14px;
         font-size:16px;
         border: 2px solid black;
         background-color: #105ac9;
     }
-}
-
-
-@media (max-width:1000px) {
-    * {
-        margin: 0 0 0 0;
-        padding: 0 0 0 0;
-    }
-    
-    body{
-        width:100vw; height:100vh;
-        display:flex;
-        justify-content: center;
-        align-items: center;
-        background-image: linear-gradient(rgb(4, 159, 255), rgb(0, 204, 255));
-    }
-    
-    #container{
-        display:flex;
-        flex-direction: row;
-        background-color: #efefef;
-        width: 80%;
-        height: 60%;
-    }
-    
-    #div-esquerda{
-        display:flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #105ac9;
-        width:55%;
-        height: 100%;
-    }
-    
-    #div-esquerda img{
+    /* ##### cadastro2.php #####*/
+    #input-cadastrar{
         width:80%;
-        height:80%;
-    }
-    
-    #div-direita{
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;;
-        width:45%;
-        height:100%;
-    }
-    
-    #div-direita h3{
-        display:flex;
-        height:10%; width:100%;
-        align-items: center; justify-content: center;
-    }
-    
-    #div-direita form{
-        display:flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height:90%;
-        width:100%;
-    }
-    
-    #div-direita form label{
-        font-family: 'Poppins', sans-serif;
-        font-size:24px;
-        font-weight: bold;
-    }
-    
-    #div-direita form .input{
-        padding: 0 0 0 15px;
-        margin: 0 0 25px 0;
-        width: 80%;
-        height:36px;
-        outline:none;
-        border:none;
-    }
-    
-    #div-direita form .input:focus{
-        border-bottom: 2px solid #105ac9
-    }
-    
-    #div-direita #input-prosseguir{
-        width:50%;
         height:10%;
         font-family: 'Poppins', sans-serif;
         font-weight: bold;
         color:#efefef;
-        border-radius:15px;
+        border-radius:14px;
         font-size:16px;
         border: 2px solid black;
         background-color: #105ac9;
     }
+
 }
 
-@media (max-width:890px) {
-    #div-direita form label{
+@media (max-width: 600px){
+    .form_label{
         font-family: 'Poppins', sans-serif;
-        font-size:16px;
+        font-size:12px;
         font-weight: bold;
+    }
+}
+
+@media (max-height: 650px){
+    .form_input{
+        padding: 0 0 0 0;
+        margin: 0 0 0 0;
+        width: 80%;
+        height: 36px;
+        outline:none;
+        border:none;
     }
 }
